feat: style x lint added

--- a/package.json
+++ b/package.json
@@ -3,9 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
-  "license": "MIT", 
+  "license": "MIT",
   "private": true,
+  "scripts": {
+    "lint": "eslint ./packages/script/src ./packages/script/__test__ ./packages/server/src ./packages/server/__test__ --ext .js",
+    "lint:fix": "eslint ./packages/script/src ./packages/script/__test__ ./packages/server/src ./packages/server/__test__ --ext .js --fix",
+    "style:check": "prettier --check './packages/script/src/*.js' './packages/server/src/*.js' './packages/server/src/controllers/*.js'",
+    "style:fix": "prettier --write './packages/script/src/*.js' './packages/server/src/*.js' './packages/server/src/controllers/*.js'"
+  },
   "workspaces": {
-    "packages": ["packages/*"]
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.2.1"
   }
 }
