--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack", 
+    "test": "NODE_ENV=test jest --passWithNoTests",
+    "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
-  },
-  "dependencies": {
-    "jest": "^26.6.3"
   }
 }
