--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.2.1"
+    "@types/jest": "^26.0.15",
+    "@types/module-alias": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "ts-jest": "^26.4.3",
+    "jest": "^26.6.1",
+    "eslint": "^7.12.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.2"
   }
 }
