--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -4,13 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack", 
+    "clean": "rm -rf ./dist", 
+    "build": "NODE_ENV=production tsc -p tsconfig.script.json", 
+    "compile": "yarn clean && yarn build", 
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
-  },
-  "devDependencies": {
-    "jest": "^26.6.3",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
   }
 }
