--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@types/module-alias": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
-    "ts-jest": "^26.4.3",
-    "jest": "^26.6.1",
     "eslint": "^7.12.1",
+    "jest": "^26.6.1",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.3",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.2"
   }
 }
