--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist", 
-    "build": "NODE_ENV=production tsc -p tsconfig.script.json", 
+    "build": "NODE_ENV=production tsc -p tsconfig.json", 
     "compile": "yarn clean && yarn build", 
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
