--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf ./dist", 
-    "build": "NODE_ENV=production tsc -p tsconfig.json", 
-    "compile": "yarn clean && yarn build", 
+    "clean": "rm -rf ./dist",
+    "build": "NODE_ENV=production tsc -p tsconfig.json",
+    "compile": "yarn clean && yarn build",
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
+  },
+  "dependencies": {
+    "axios": "^0.21.0"
   }
 }
