--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -11,6 +11,7 @@
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "email-validator": "^2.0.4"
   }
 }
