--- a/packages/script/package.json
+++ b/packages/script/package.json
@@ -5,13 +5,21 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "NODE_ENV=production tsc -p tsconfig.json",
+    "build": "NODE_ENV=production webpack",
     "compile": "yarn clean && yarn build",
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch --passWithNoTests"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "email-validator": "^2.0.4"
+    "email-validator": "^2.0.4",
+    "module-alias": "^2.2.2"
+  },
+  "devDependencies": {
+    "ts-loader": "^8.0.11",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
